--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-wrighter==0.1.1
-stdl>=0.4.1
+wrighter==0.1.2
+stdl>=0.4.2
 jsonschema==4.17.3
 jsonpath-ng==1.5.3
 playwright>=1.29.0
+tabulate==0.9.0
