--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wrighter-plugins"
-version = "0.0.2"
+version = "0.0.3"
 description = "Plugins for Wrighter"
 authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
 license = { file = "LICENSE.txt" }
@@ -33,11 +33,11 @@ keywords = [
 ]
 
 dependencies = [
-  "wrighter==0.1.2",
-  "stdl>=0.4.4",
-  "jsonschema==4.17.3",
-  "jsonpath-ng==1.5.3",
-  "playwright>=1.29.0",
+  "wrighter==0.1.3",
+  "stdl>=0.6.1",
+  "jsonschema>=4.17.3",
+  "jsonpath-ng>=1.5.3",
+  "playwright>=1.50.0",
 ]
 
 [project.optional-dependencies]
